--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Migracode Hotel</title>
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-<div class="main">
-    <ul>
-        <li><a href="#"> HOME</a></li>
-        <li><a href="#"> ABOUT</a></li>
-        <li><a href="#"> SERVICE</a></li>
-        <li><a href="#"> CONTACT</a></li>
-    </ul>
-</div>
-    </header>
+    <header><img src="/migracode_hotel/img/migracode_logo.png" alt=""></header>
+    <nav>
+        <ul>
+            <li><a href="#"> HOME</a></li>
+            <li><a href="#"> ABOUT</a></li>
+            <li><a href="#"> SERVICE</a></li>
+            <li><a href="#"> CONTACT</a></li>
+        </ul>
+    </nav>
+    <main>
 
-    <header>
-<h1>Migracode Hotel</h1>
-<h2>Hotel&Resourt</h2>
-    </header>
+    </main>
+
+    <footer>
+
+    </footer>
 
 
-    
+
+
+
+
+
+
 </body>
+
 </html>
