--- a/index.html
+++ b/index.html
@@ -6,24 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Migracode Hotel</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <header><img src="/migracode_hotel/img/migracode_logo.png" alt=""></header>
-    <nav>
-        <ul>
-            <li><a href="#"> HOME</a></li>
-            <li><a href="#"> ABOUT</a></li>
-            <li><a href="#"> SERVICE</a></li>
-            <li><a href="#"> CONTACT</a></li>
-        </ul>
-    </nav>
+    <header class="header-nav">
+        <div class="logo-left">
+            <img src="/img/migracode_logo.png" alt=""></div>
+        <nav>
+            <ul>
+                <li><a href="#"> Sign in</a></li>
+                <li><a href="#"> Register</a></li>
+                <li><a href="#"> Services</a></li>
+                <li><a href="#"> Contact</a></li>
+                <select name="Currency" id="Currency">
+                    <option selected value="Euro">euro (€)</option>
+                    <option value="usd">dolar (U$S)</option>
+                    <option value="bitcoin">bitcoin (฿)</option>
+                </select>
+            </ul>
+        </nav>
+    </header>
+
     <main>
 
     </main>
 
-    <footer>
+
+    <footer class="footer-distributed">
+
+        <div class="footer-left">
+
+            <img src="/img/migracode_logo.png" alt="migracode_logo">
+
+            <p class="footer-links">
+                <a href="#">Home</a>
+                ·
+                <a href="#">About</a>
+                ·
+                <a href="#">Faq</a>
+                ·
+                <a href="#">Contact</a>
+            </p>
+
+            <p class="footer-company-name">Migracode Hotels © 2020</p>
+
+            <div class="footer-icons">
+
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+
+            </div>
+
+        </div>
+
+        <div class="footer-right">
+
+            <p>Contact Us</p>
+
+            <form action="#" method="post">
+
+                <input type="text" name="email" placeholder="Email">
+                <textarea name="message" placeholder="Message"></textarea>
+                <button>Send</button>
+
+            </form>
+
+        </div>
 
     </footer>
 
