--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </nav>
     </header>
-
+<!-- -----------------------------MAIN--------------------->
     <main>
         <div class="background">
             <div class="contenedor-principal">
@@ -131,6 +131,7 @@
                             <h1>HOTELS, RESORTS, HOSTELS & MORE</h1>
                             <h2>Find the perfect for you</h2>
                         </div>
+                        <!-- -----------------------------MENU--------------------->
                         <div class="menu">
                             <form>
                                 <div class="form-row">
@@ -138,10 +139,10 @@
                                         <input type="text" class="form-control" placeholder="Where are you goin?">
                                     </div>
                                     <div class="col">
-                                        <input type="text" class="form-control" id="datepicker" placeholder="Check-in">
+                                        <input type="date" class="form-control" id="datepicker" placeholder="Check-in">
                                     </div>
                                     <div class="col">
-                                        <input type="text" class="form-control" placeholder="Check-out">
+                                        <input type="date" class="form-control" placeholder="Check-out">
                                     </div>
                                     <div class="col">
                                         <button id="submit">Serch</button>
@@ -204,6 +205,7 @@
 
             </div>
         </div>
+        <!-- -----------------------------CARDS--------------------->
         <div class="cards">
             <div class="card-deck">
                 <div class="card">
@@ -213,7 +215,7 @@
                         <h5 class="card-title">Hotel Monte Puertatierra</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Cádiz</small></p>
+                        <p class="card-text"><small class="text-muted"><i class="fas fa-map-marker-alt"></i> Cádiz</small></p>
                     </div>
                 </div>
                 <div class="card">
@@ -223,7 +225,7 @@
                         <h5 class="card-title">Hotel Cristina Las Palmas</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
                             content.</p>
-                        <p class="card-text"><small class="text-muted">Las Palmas de Gran Canaria</small></p>
+                        <p class="card-text"><small class="text-muted"><i class="fas fa-map-marker-alt"></i> Las Palmas de Gran Canaria</small></p>
                     </div>
                 </div>
                 <div class="card">
@@ -234,7 +236,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This card has even longer content than the first to show that equal
                             height action.</p>
-                        <p class="card-text"><small class="text-muted">Montbrió de Tarragona</small></p>
+                        <p class="card-text"><small class="text-muted"><i class="fas fa-map-marker-alt"></i> Montbrió de Tarragona</small></p>
                     </div>
                 </div>
             </div>
@@ -246,7 +248,7 @@
                         <h5 class="card-title">Extremadura Hotel</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Cáceres</small></p>
+                        <p class="card-text"><small class="text-muted"><i class="fas fa-map-marker-alt"></i> Cáceres</small></p>
                     </div>
                 </div>
                 <div class="card">
@@ -256,7 +258,7 @@
                         <h5 class="card-title">Sercotel Ciudad de Oviedo</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
                             content.</p>
-                        <p class="card-text"><small class="text-muted">Oviedo</small></p>
+                        <p class="card-text"><small class="text-muted"><i class="fas fa-map-marker-alt"></i> Oviedo</small></p>
                     </div>
                 </div>
                 <div class="card">
@@ -267,7 +269,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This card has even longer content than the first to show that equal
                             height action.</p>
-                        <p class="card-text"><small class="text-muted">Vilasar de Dalt</small></p>
+                        <p class="card-text"><small class="text-muted"><i class="fas fa-map-marker-alt"></i> Vilasar de Dalt</small></p>
                     </div>
                 </div>
             </div>
