--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Sorli Emocions</h5>
+                        <div class="card-content">
+                        <div class="card-details card-body"><p class="card-text"><small class="text-muted"> Precio recomendado</small></p> <p>USD 105</p></div><div class="card-details card-body"></div>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This card has even longer content than the first to show that equal
                             height action.</p>
